# gha-testbed

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: gha_testbed_ci_cd.yml
api/: main.py
tests/: test_api.py
